mcfootball-generator/src/test/resources/football/invalid/EmptyLeague.fb
/* Invalid — triggers 0xFC016: league has zero matches. */
footballsite EmptyLeagueTest {

  navigation { Testland; }

  country Testland {
    league EmptyLeague season "2025-2026" { }
  }

}
